# repo-reader

./: .env.example  .gitignore  Dockerfile  README.md  chat_api.py  dice_agent.py  docker-compose.yml  landing-page.html  main.py  pyproject.toml  rate_limiter.py  repo-reader-landing.html  repo-reader-landing.html.artifact.json  repo_reader.py  sessions.py  skills-lock.json  test_api.py
.commandcode/: settings.local.json
frontend/: Dockerfile  GEMINI.md  README.md  connect-to-backend.md  docker-compose.yml  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: index.css
frontend/src/components/: FileTree.tsx  Sidebar.tsx
frontend/src/components/chat/: ChatContainer.tsx  ChatHeader.tsx  ChatInput.tsx  ChatMessage.tsx  LoadingDots.tsx  WebhookSettings.tsx
frontend/src/hooks/: useChat.ts  useTheme.ts
frontend/src/pages/: Chat.tsx  Index.tsx
frontend/src/types/: chat.ts
