[project]
name = "repo-reader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.1",
    "pathspec>=1.1.0",
    "pydantic-ai>=1.86.1",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "rich>=15.0.0",
    "uvicorn>=0.46.0",
]
